--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           </section>
       </div>
 
-      <div class="container">
-        <section class="section-features">
+      
+        <section class="section features"><div class="container">
           <h2 class="blank">Особливості</h2>
           <ul class="features-list list">
             <li class="features-item">
@@ -97,9 +97,9 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
-    <section class="section-studioaffairs ">
+        </div></section>
+      
+    <section class="section studioaffairs ">
       <div class="container">
           <h2 class="studioaffairs-head">Чим ми займаємося</h2>
           <ul class="list studioaffairs-list">
@@ -130,7 +130,7 @@
           </ul>
       </div>
     </section>
-    <section class="section-team ">
+    <section class="section team ">
         <div class="container">
             <h2 class="team-head">Наша команда</h2>
             <ul class="list team-list">
