--- a/portfolio.html
+++ b/portfolio.html
@@ -62,12 +62,7 @@
           <h1 class="portfolio-head-blank">Портфоліо</h1>
           <ul class="list portfolio-button-list">
             <li class="portfolio-button-list-item">
-              <button
-                type="button"
-                class="portfolio-button portfolio-active-button"
-              >
-                Усі
-              </button>
+              <button type="button" class="portfolio-button">Усі</button>
             </li>
             <li class="portfolio-button-list-item">
               <button type="button" class="portfolio-button">Веб-сайти</button>
